--- a/src/app/features/components/file-browser/nautilus/nautilus.component.scss
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.scss
@@ -175,6 +175,11 @@ mat-nav-list {
     filter: grayscale(100%) opacity(0.5);
   }
 
+  &.active {
+    background: var(--bg-selected);
+    color: var(--accent-color);
+  }
+
   mat-icon {
     width: 20px;
     height: 20px;
