--- a/src/app/features/components/file-browser/nautilus/nautilus.component.html
+++ b/src/app/features/components/file-browser/nautilus/nautilus.component.html
@@ -108,19 +108,6 @@
                   <mat-icon matListIcon [svgIcon]="iconService.getIconName(remote.type)"></mat-icon>
                   <p matLine>{{ remote.label }}</p>
                 </span>
-                <span class="eject">
-                  @if (remote.isMounted) {
-                    <button
-                      class="nav-button"
-                      (click)="
-                        unmount(remote.mountPoint || '', remote.name || '');
-                        $event.stopPropagation()
-                      "
-                    >
-                      <mat-icon svgIcon="eject"></mat-icon>
-                    </button>
-                  }
-                </span>
               </span>
             </mat-list-item>
           }
@@ -166,7 +153,7 @@
         } @else if (!isEditingPath()) {
           @if (starredMode()) {
             <div class="path-scroll-view hide-scrollbar">
-              <button class="path-segment home-segment">
+              <button class="path-segment">
                 <mat-icon svgIcon="star"></mat-icon>
                 Starred
               </button>
@@ -177,10 +164,7 @@
               #pathScrollView
               (wheel)="onPathScroll($event)"
             >
-              <button
-                class="path-segment home-segment"
-                (click)="$event.stopPropagation(); updatePath('')"
-              >
+              <button class="path-segment" (click)="$event.stopPropagation(); updatePath('')">
                 <mat-icon
                   [svgIcon]="
                     nautilusRemote()?.fs_type === 'local'
@@ -264,7 +248,7 @@
       </div>
     }
 
-    <div class="nautilus-content" [class.list-layout]="layout() === 'list'">
+    <div class="nautilus-content">
       @if (layout() === 'grid') {
         <cdk-virtual-scroll-viewport
           class="nautilus-grid"
@@ -395,7 +379,7 @@
               <th
                 mat-header-cell
                 *matHeaderCellDef
-                class="align-right sortable-header"
+                class="sortable-header"
                 (click)="toggleSort('size')"
               >
                 <div class="header-content right-aligned">
@@ -407,7 +391,7 @@
                   Size
                 </div>
               </th>
-              <td mat-cell *matCellDef="let item" class="align-right">
+              <td mat-cell *matCellDef="let item">
                 {{ item.entry.IsDir ? '--' : (item.entry.Size | formatFileSize) }}
               </td>
             </ng-container>
@@ -416,7 +400,7 @@
               <th
                 mat-header-cell
                 *matHeaderCellDef
-                class="align-right sortable-header"
+                class="sortable-header"
                 (click)="toggleSort('modified')"
               >
                 <div class="header-content right-aligned">
@@ -428,14 +412,14 @@
                   Modified
                 </div>
               </th>
-              <td mat-cell *matCellDef="let item" class="align-right">
+              <td mat-cell *matCellDef="let item">
                 {{ formatRelativeDate(item.entry.ModTime) }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="star">
-              <th mat-header-cell *matHeaderCellDef class="align-center"></th>
-              <td mat-cell *matCellDef="let item" class="align-center">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let item">
                 <button
                   mat-icon-button
                   class="star-button"
@@ -494,7 +478,7 @@
         <div class="loading-overlay">
           <mat-spinner diameter="24"></mat-spinner>
           <span>Loading...</span>
-          <button mat-icon-button (click)="cancelLoad()">
+          <button class="nav-button" (click)="cancelLoad()">
             <mat-icon svgIcon="close"></mat-icon>
           </button>
         </div>
@@ -540,7 +524,12 @@
                 <span>Open in New Tab</span>
               </button>
             }
-            <button class="menu-item" cdkMenuItem (click)="openContextMenuSelectToggle()">
+            <button
+              class="menu-item"
+              cdkMenuItem
+              (click)="openContextMenuSelectToggle()"
+              [disabled]="isPickerMode() && !pickerOptions().multi"
+            >
               <span>Toggle Select</span>
             </button>
             <button class="menu-item" cdkMenuItem (click)="openContextMenuCopyPath()">
@@ -588,7 +577,12 @@
           }
           <div class="menu-divider"></div>
 
-          <button class="menu-item" cdkMenuItem (click)="selectAll()">
+          <button
+            class="menu-item"
+            cdkMenuItem
+            (click)="selectAll()"
+            [disabled]="isPickerMode() && !pickerOptions().multi"
+          >
             <span>Select All</span>
           </button>
 
@@ -609,9 +603,20 @@
 
     @if (isPickerMode()) {
       <div class="picker-actions" [class.mobile-picker]="isMobile()">
-        <span class="selection-info">{{ selectionSummary() }}</span>
         <button mat-stroked-button (click)="onClose()">Cancel</button>
-        <button mat-flat-button class="primary" (click)="confirmSelection()">Open</button>
+        <button
+          mat-flat-button
+          class="primary"
+          (click)="confirmSelection()"
+          [disabled]="isConfirmDisabled()"
+        >
+          Open
+        </button>
+      </div>
+    }
+    @if (selectionSummary()) {
+      <div class="selection-info-container">
+        <span class="selection-info">{{ selectionSummary() }}</span>
       </div>
     }
   </mat-sidenav-content>
