--- a/src/app/features/components/dashboard/serve-overview/serve-overview.component.html
+++ b/src/app/features/components/dashboard/serve-overview/serve-overview.component.html
@@ -1,5 +1,5 @@
 <!-- serve-overview.component.html -->
-<div class="serve-overview" @fadeInOut>
+<div class="serve-overview" animate.enter="fade-in-out-enter" animate.leave="fade-in-out-leave">
   <!-- Header Section -->
   <app-overview-header mode="serve"></app-overview-header>
 
