--- a/src/app/shared/components/loading-overlay/loading-overlay.component.html
+++ b/src/app/shared/components/loading-overlay/loading-overlay.component.html
@@ -1,5 +1,9 @@
-<div class="loading-overlay" [@fadeInOut]>
-  <div class="loading-content" [@loadingSpinner]>
+<div class="loading-overlay" animate.enter="fade-in-out-enter" animate.leave="fade-in-out-leave">
+  <div
+    class="loading-content"
+    animate.enter="loading-spinner-enter"
+    animate.leave="loading-spinner-leave"
+  >
     <div class="loading-spinner">
       <mat-icon [svgIcon]="icon()" class="animate-spin"></mat-icon>
     </div>
