--- a/src/app/shared/components/password-manager/password-manager.component.html
+++ b/src/app/shared/components/password-manager/password-manager.component.html
@@ -1,7 +1,7 @@
 <div class="password-section" [class.entering]="isEntering()">
   <!-- Error message with enhanced styling -->
   @if (hasError()) {
-    <div class="password-description error" @slideInOut [class.shake]="shouldShake()">
+    <div class="password-description error" [class.shake]="shouldShake()">
       {{ errorMessage() }}
     </div>
   }
